--- a/html/a.html
+++ b/html/a.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        function tests(key) {
-            var newVal = 1
-            return {
-                [key]: newVal
-            }
-        }
-        console.log(tests('b'))
+      function tests(key) {
+        var newVal = 1;
+        return {
+          [key]: newVal,
+        };
+      }
+      console.log(tests("bv"));
     </script>
-</body>
-
+  </body>
 </html>
