--- a/html/a.html
+++ b/html/a.html
@@ -15,7 +15,7 @@
           [key]: newVal,
         };
       }
-      console.log(tests("bv"));
+      console.log(tests("b"));
     </script>
   </body>
 </html>
